--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
   "name": "aula-node_joao-vidal",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "index": "node index.js",
-    "dev": "nodemon --watch . --ext js --ignore node_modules --exec \"node index.js\""  },
+    "start": "node index.js",
+    "dev":   "node index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/joaovidalsenai/aula-node_joao-vidal.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/joaovidalsenai/aula-node_joao-vidal/issues"
-  },
-  "homepage": "https://github.com/joaovidalsenai/aula-node_joao-vidal#readme",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "inquirer": "^12.8.2",
-    "nodemon": "^3.1.10"
+    "express":  "^5.1.0",
+    "inquirer": "^12.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.10"
   }
 }
